# tbd_podi

./: CHANGELOG.md  LICENSE  README.md  install.repos
.github/workflows/: main.yml
tbd_podi/: CMakeLists.txt  package.xml
tbd_podi_2dnav/: CMakeLists.txt  package.xml  tbd_costmap_plugins.xml
tbd_podi_2dnav/cfg/: HumanLayerPlugin.cfg  InteractionLayerPlugin.cfg
tbd_podi_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  podi.mprim  podi_25mm.mprim  podi_50mm.mprim  sbpl_global_params.yaml
tbd_podi_2dnav/include/tbd_podi_2dnav/: human_layer.h  interaction_space_layer.h
tbd_podi_2dnav/launch/: run_gmapping.launch  start_mapping_recording copy.launch  start_mapping_recording.launch  start_ros_nav.launch
tbd_podi_2dnav/maps/: NSH_AOLD.pgm  NSH_A_Summer_2018_Partway_Cropped.pgm  NSH_A_Summer_2018_Partway_Cropped.yaml  lab-2021-02-24.yaml  lab-2021-03-03.yaml  lab_2021-04-24_25mm.yaml  lab_2021-05-20_25mm.yaml  lab_2021-05-20_50mm.yaml  lab_2021-06-07_50mm.yaml  lab_2021-06-16_50mm.yaml  lab_2021-07-08_50mm.yaml  lab_sim_2021-03-18_25mm.yaml  lab_sim_2021-03-18_50mm.yaml  nsh-3rd-entry-way-11-11-2020.yaml  nshA.yaml  nsh_3_hallway-2021-09-19_50mm.yaml  sim-2020-04-nsh-3rd-entryway.yaml  sim-2020-11-nsh-3rd-entryway.yaml  sim-lab-2021-03-04.yaml  sim-lab-2021-03-18.yaml
tbd_podi_2dnav/plugins/: human_layer.cpp  interaction_space_layer.cpp
tbd_podi_common/: CMakeLists.txt  README.md  package.xml
tbd_podi_common/bat/: bat_subscriber.py
tbd_podi_common/include/tbd_podi_common/: control_robot.h
tbd_podi_common/launch/: collect_ros_nav_map_data.launch  control_robot_base.launch  control_robot_laser.launch  control_robot_laser_and_ZED.launch  control_robot_laser_and_localization.launch
tbd_podi_common/launch/dependencies/: static_transformations.launch  zed_camera.launch
tbd_podi_common/maps/: NSH_AOLD.yaml  nshA.pgm
tbd_podi_common/rviz/: podi_default.rviz  podi_default_laser.rviz  podi_default_laser_and_ZED.rviz  podi_ros_navigation.rviz
tbd_podi_common/scripts/: computer_state_node.py  handle_state_node.py
tbd_podi_common/src/: control_robot.cpp  control_robot_node.cpp  laser_scan_frame_transform.cpp
tbd_podi_description/: CMakeLists.txt  LICENSE  README.md  package.xml
tbd_podi_description/launch/: podi_urdf_in_rviz.launch
tbd_podi_description/rviz/: podi_urdf.rviz
tbd_podi_description/urdf/: azure_kinect.urdf.xacro  inertia_tensors.xacro  pioneer3dx.urdf.xacro  pioneer3dx_wheel.xacro  podi.gazebo.xacro  podi.urdf  podi.urdf.xacro  podi_handle.xacro  podi_structure.xacro  zed_descr.urdf.xacro
tbd_podi_face/: CMakeLists.txt  README.md  package.xml
tbd_podi_face/launch/: run.launch
tbd_podi_face/scripts/: faceResponseRelay.py
tbd_podi_gazebo/: CMakeLists.txt  package.xml
tbd_podi_gazebo/launch/: modules.launch  spawn_podi.launch  spawn_world.launch  start_ros_nav.launch
tbd_podi_gazebo/maps/: sim_NSH_04_2020.yaml
tbd_podi_gazebo/rviz/: 2dnav.rviz  simple.rviz
tbd_podi_gazebo/worlds/: NSH-3rd-Entryway-2020-11.world
tbd_podi_msgs/: CMakeLists.txt  package.xml
tbd_podi_msgs/action/: setHandleHeight.action
tbd_podi_msgs/msg/: PodiFaceInput.msg
tbd_podi_usertracking/: CMakeLists.txt  package.xml
tbd_podi_usertracking/launch/: start_usertracking.launch
tbd_podi_usertracking/msg/: UserPosition.msg
tbd_podi_usertracking/src/: sim_geoC.py
tbd_podi_uwb/: CMakeLists.txt  package.xml
tbd_podi_uwb/bags/: 2022-10-05-16-39-17.bag  2022-10-05-16-57-53.bag  2022-10-07-16-26-55.bag  2022-10-07-16-35-03.bag  2022-10-07-16-45-43.bag  pose_uwb.csv
tbd_podi_uwb/scripts/: uwb_positioning.py
tbd_podi_zed/: CMakeLists.txt  package.xml
tbd_podi_zed/launch/: zed_camera.launch
